fixed rust warnings; fixed icon not showing

--- a/src/style.sass
+++ b/src/style.sass
@@ -51,7 +51,7 @@ div.layout
         padding: .3rem
       div.entry
         background: #1d1d1d
-        margin: 0 1rem 1rem 1rem
+        margin: .6rem
         border-radius: 7px
         display: flex
         flex-direction: row
@@ -104,7 +104,7 @@ div.layout
           background: #c0c0c0
           cursor: pointer
       button.update_button
-        margin: .6rem .3rem .3rem .3rem
+        margin: .6rem .6rem .3rem .6rem
     div.feed
       cursor: pointer
       display: flex
@@ -153,7 +153,7 @@ div.layout
       display: flex
       position: relative
       flex-direction: column
-      padding: 1rem
+      padding: 1rem 1rem 0 1rem
       margin: .3rem
       cursor: pointer
       gap: .4rem
